# convex-hull-visualization

./: CMakeLists.txt  README.md  build.sh
source/: cvxhull.cpp  gltest.cpp
source/visualizer/: CMakeLists.txt  visualizer.cpp  visualizer.hpp
